lots of findbugs stuff, tried to clean up what I can